# crack

./: .travis.yml  CMakeLists.txt  README.md
src/: arrays_and_strings.cpp  linked_lists.cpp  main.cpp
